--- a/K580C i7/CLOVER/kexts/10.10/RealtekRTL8111.kext/Contents/Info.plist
+++ b/K580C i7/CLOVER/kexts/10.10/RealtekRTL8111.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>12F45</string>
+	<string>14D136</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -17,15 +17,15 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.3</string>
+	<string>2.0.0d2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2.3</string>
+	<string>2.0.0d2</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>4H1503</string>
+	<string>6D2105</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
@@ -33,9 +33,9 @@
 	<key>DTSDKName</key>
 	<string>macosx10.8</string>
 	<key>DTXcode</key>
-	<string>0463</string>
+	<string>0632</string>
 	<key>DTXcodeBuild</key>
-	<string>4H1503</string>
+	<string>6D2105</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>RTL8111 PCIe Adapter</key>
@@ -43,7 +43,7 @@
 			<key>CFBundleIdentifier</key>
 			<string>com.insanelymac.RealtekRTL8111</string>
 			<key>Driver_Version</key>
-			<string>1.2.3</string>
+			<string>2.0.0d2</string>
 			<key>IOClass</key>
 			<string>RTL8111</string>
 			<key>IOPCIMatch</key>
@@ -54,6 +54,10 @@
 			<string>IOPCIDevice</string>
 			<key>Model</key>
 			<string>RTL8111</string>
+			<key>RM,Build</key>
+			<string>Release-RehabMan</string>
+			<key>RM,Version</key>
+			<string>RealtekRTL8111 2.0.0d2</string>
 			<key>Vendor</key>
 			<string>Realtek</string>
 			<key>disableASPM</key>
@@ -67,7 +71,7 @@
 			<key>enableTSO6</key>
 			<true/>
 			<key>intrMitigate</key>
-			<integer>53080</integer>
+			<integer>24401</integer>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
@@ -75,7 +79,7 @@
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IONetworkingFamily</key>
-		<string>1.5.0</string>
+		<string>1.1.0</string>
 		<key>com.apple.iokit.IOPCIFamily</key>
 		<string>1.7</string>
 		<key>com.apple.kpi.bsd</key>
