--- a/K580C i7/CLOVER/kexts/10.10/VoodooPS2Controller.kext/Contents/Info.plist
+++ b/K580C i7/CLOVER/kexts/10.10/VoodooPS2Controller.kext/Contents/Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14A389</string>
+	<string>14D136</string>
 	<key>CFBundleExecutable</key>
 	<string>VoodooPS2Controller</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.8.13, Copyright Apple Computer, Inc. 2000-2003, David Elliot 2007, RehabMan 2012-2013</string>
+	<string>1.8.15, Copyright Apple Computer, Inc. 2000-2003, David Elliot 2007, RehabMan 2012-2013</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.rehabman.voodoo.driver.PS2Controller</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,11 +21,11 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.8.13</string>
+	<string>1.8.15</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>6A1046a</string>
+	<string>6D1002</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
@@ -33,9 +33,9 @@
 	<key>DTSDKName</key>
 	<string>macosx10.8</string>
 	<key>DTXcode</key>
-	<string>0610</string>
+	<string>0631</string>
 	<key>DTXcodeBuild</key>
-	<string>6A1046a</string>
+	<string>6D1002</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>ACPI PS/2 Nub</key>
@@ -130,11 +130,11 @@
 			<key>RM,Build</key>
 			<string>Release-RehabMan</string>
 			<key>RM,Version</key>
-			<string>VoodooPS2Controller 1.8.13</string>
+			<string>VoodooPS2Controller 1.8.14</string>
 		</dict>
 	</dict>
 	<key>OSBundleCompatibleVersion</key>
-	<string>1.8.13</string>
+	<string>1.8.15</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOACPIFamily</key>
