--- a/K580C i7/S:L:E/FakeSMC.kext/Contents/PlugIns/LPCSensors.kext/Contents/Info.plist
+++ b/K580C i7/S:L:E/FakeSMC.kext/Contents/PlugIns/LPCSensors.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14C81f</string>
+	<string>14D136</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -17,25 +17,25 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>6.14.1364</string>
+	<string>6.16.1372</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1364</string>
+	<string>1372</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>6A2008a</string>
+	<string>6D2105</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>13F26</string>
+	<string>13F34</string>
 	<key>DTSDKName</key>
 	<string>macosx10.9</string>
 	<key>DTXcode</key>
-	<string>0611</string>
+	<string>0632</string>
 	<key>DTXcodeBuild</key>
-	<string>6A2008a</string>
+	<string>6D2105</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>Fintek F718x Monitor</key>
@@ -2796,6 +2796,7 @@
 				<string>Nuvoton,NCT6776F</string>
 				<string>Nuvoton,NCT6779D</string>
 				<string>Nuvoton,NCT6791D</string>
+				<string>Nuvoton,NCT6792D</string>
 			</array>
 			<key>IOProbeScore</key>
 			<string>3000</string>
