--- a/K580C i7/S:L:E/RealtekRTL8111.kext/Contents/Info.plist
+++ b/K580C i7/S:L:E/RealtekRTL8111.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14A389</string>
+	<string>14D136</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -17,25 +17,25 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.3</string>
+	<string>2.0.0d2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2.3</string>
+	<string>2.0.0d2</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>6A1046a</string>
+	<string>6D2105</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>10M2518</string>
+	<string>12D75</string>
 	<key>DTSDKName</key>
-	<string>macosx10.6</string>
+	<string>macosx10.8</string>
 	<key>DTXcode</key>
-	<string>0610</string>
+	<string>0632</string>
 	<key>DTXcodeBuild</key>
-	<string>6A1046a</string>
+	<string>6D2105</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>RTL8111 PCIe Adapter</key>
@@ -43,7 +43,7 @@
 			<key>CFBundleIdentifier</key>
 			<string>com.insanelymac.RealtekRTL8111</string>
 			<key>Driver_Version</key>
-			<string>1.2.3</string>
+			<string>2.0.0d2</string>
 			<key>IOClass</key>
 			<string>RTL8111</string>
 			<key>IOPCIMatch</key>
@@ -57,7 +57,7 @@
 			<key>RM,Build</key>
 			<string>Release-RehabMan</string>
 			<key>RM,Version</key>
-			<string>RealtekRTL8111 1.2.3</string>
+			<string>RealtekRTL8111 2.0.0d2</string>
 			<key>Vendor</key>
 			<string>Realtek</string>
 			<key>disableASPM</key>
